force-app/main/default/objects/pse__Revenue_Forecast_Version_Adjustment__c/fields/pse__Adjusted_By__c.field-meta.xml
<CustomField>
    <fullName>pse__Adjusted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the user who made the adjustment. If you are using the Persist Adjustments Across Versions option on the active revenue forecast setup record, on future versions this shows the user who made the original adjustment.</description>
    <inlineHelpText>Lookup to the user who made the adjustment. If you are using the Persist Adjustments Across Versions option on the active revenue forecast setup record, on future versions this shows the user who made the original adjustment.</inlineHelpText>
    <label>Adjusted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Revenue Forecast Adjustments</relationshipLabel>
    <relationshipName>Revenue_Forecast_Version_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>