force-app/main/default/objects/pse__Revenue_Forecast_Version_Adjustment__c/fields/pse__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Expiration_Date__c</fullName>
    <description>The date the adjustment ceases to be included in a future version. If you are using Persist Adjustments Across Versions on the active setup record, only adjustments with no expiration date or a date in the future are copied into subsequent versions.</description>
    <inlineHelpText>The date the adjustment ceases to be included in a future version. If you are using Persist Adjustments Across Versions on the active setup record, only adjustments with no expiration date or a date in the future are copied into subsequent versions.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>