force-app/main/default/objects/pse__Revenue_Forecast_Version_Adjustment__c/fields/pse__Time_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the time period this adjustment relates to.</description>
    <inlineHelpText>Lookup to the time period this adjustment relates to.</inlineHelpText>
    <label>Time Period</label>
    <referenceTo>pse__Time_Period__c</referenceTo>
    <relationshipLabel>Revenue Forecast Adjustments</relationshipLabel>
    <relationshipName>Revenue_Forecast_Version_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>